--- a/estilo.css
+++ b/estilo.css
@@ -17,7 +17,7 @@ nav{
     align-items: center;
     flex-wrap: wrap;
     height: 60px;
-    background-color:#c16f1c;
+    background-color:#5e3219;
 }
 header img{
     width:100%;
@@ -31,22 +31,22 @@ a{
     height: auto;
 }
 a:hover{
-    background-color:#F2D5BB;
+    font-weight: bold;
+    background-color:#c16f1c;
     height: auto;
+    font-size: 30px;
 }
-section#imagem{
-    height:300px;
-    width:100%;
-}
+
 section img{
     width:100%;
     max-width: 100%;
+    height: 500px;
 }
 section#projeto, section#equipe, section#seduckathon{
     height: auto;
     font-size: 20px;
     padding: 20px;
-    color: #F2B138;
+    color: #5e3219;
 }
 h1{
     color: #F27C38;
@@ -56,7 +56,7 @@ footer{
     font-size: 16px;
     color:#F2F0CE;
     text-align: center;
-    background-color: #F27C38;
+    background-color: #5e3219;
     padding-bottom: 10px;
     padding-top: 10px;
 }
