--- a/estilo.css
+++ b/estilo.css
@@ -36,7 +36,10 @@ a:hover{
     height: auto;
     font-size: 30px;
 }
-
+#insta{
+    height: 20%;
+    width: 20%;
+}
 section img{
     width:100%;
     max-width: 100%;
