--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ section {
 }
 
 .hero-banner {
-    background: url('assets/parqueserradacapivara.jpg') no-repeat center center/cover;
+    background: url('parqueserradacapivara.jpg') no-repeat center center/cover;
     height: 100vh;
     width: 100%;
     display: flex;
